@@ -1961,7 +1961,7 @@ void connection_dns_remove(connection_t *conn);
 void assert_connection_edge_not_dns_pending(connection_t *conn);
 void assert_all_pending_dns_resolves_ok(void);
 void dns_cancel_pending_resolve(char *question);
-int dns_resolve(connection_t *exitconn);
+int dns_resolve(connection_t *exitconn, circuit_t *oncirc);
 
 /********************************* hibernate.c **********************/
 
